--- a/css/stylebackuo.css
+++ b/css/stylebackuo.css
@@ -340,9 +340,9 @@ html, body {
   height: 100%;
 }
 
-.gallery-section .grid-col-1of12 { flex: 1. !important; }
-.gallery-section .grid-col-2of12 { flex: 2 !important; }
-.gallery-section .grid-col-3of12 { flex: 3 !important; }
+.gallery-section .grid-col-1of12 { flex: 1; }
+.gallery-section .grid-col-2of12 { flex: 2; }
+.gallery-section .grid-col-3of12 { flex: 3; }
 
 
 
@@ -1145,8 +1145,6 @@ body.project-page .grid-row > .grid-col-8of12 {
   padding-top: 0 !important;
 }
 
-
-
 /* ensure visuals fill its 4/12 column and do not escape it */
 body.project-page .grid-row > .grid-col-4of12,
 body.project-page .visuals-section {
@@ -1361,7 +1359,6 @@ body.project-page .full-bleed img {
 
   /* visuals: also span 4 of 6 (stacked after writeup) */
   html body.project-page .grid-row > .visuals-section,
-  html body.project-page .grid-row > .grid-col-2of12,
   html body.project-page .grid-row > .grid-col-4of12,
   html body.project-page .grid-row > .grid-col-8of12,
   html body.project-page .grid-row > .grid-col-9of12 {
@@ -1695,17 +1692,41 @@ body.project-page .grid-col-9of12 .visual-grid > .project-image {
 
 
 
-.project-page .grid-col-2of12 img, video,
-.project-page .grid-col-3of12 img, video,
-.project-page .grid-col-4of12 img, video,
-.project-page .grid-col-5of12 img, video,
-.project-page .grid-col-6of12 img, video,
-.project-page .grid-col-12of12 img, video {
+.grid-col-2of12 img, video {
   width: 100% !important;
   height: auto !important;
   display: block !important;
 }
 
+.grid-col-3of12 img, video {
+  width: 100% !important;
+  height: auto !important;
+  display: block !important;
+}
+
+.grid-col-4of12 img, video {
+  width: 100% !important;
+  height: auto !important;
+  display: block !important;
+}
+
+.grid-col-5of12 img, video {
+  width: 100% !important;
+  height: auto !important;
+  display: block !important;
+}
+
+.grid-col-6of12 img, video {
+  width: 100% !important;
+  height: auto !important;
+  display: block !important;
+}
+
+.grid-col-12of12 img, video {
+  width: 100% !important;
+  height: auto !important;
+  display: block !important;
+}
 
 .play-icon {
   font-family: 'ScrabenGrotesk';
