--- a/css/style.css
+++ b/css/style.css
@@ -1262,7 +1262,7 @@ body.project-page .grid-col-12of12 img {
   color: #555555;
 }
 
-.writeup-section h2{
+.writeup-section h2 {
   font-weight: 600;
 }
 
@@ -1338,6 +1338,17 @@ body.project-page .full-bleed img {
   height: auto !important;
   object-fit: cover !important;
 }
+
+ol.numbered-list {
+  font-family: srabenGrotesk;
+  list-style: decimal;
+  padding-left: 1rem;
+}
+
+ol.numbered-list li {
+  display: list-item;
+}
+
 
 @media (max-width: 1023px) {
   /* ensure 6-col grid */
