--- a/partials/header.html
+++ b/partials/header.html
@@ -13,9 +13,9 @@
 <nav class="contact-nav">
   <a href="work.html">work</a>
   <a href="about.html">about</a>
-  <a href="https://linkedin.com/in/maggieliujx" target="_blank" rel="noopener noreferrer">linkedIn</a>
-  <a href="mailto:maggieliujx@gmail.com">maggieliujx@gmail.com</a>
-    <a class="bug-report" href="mailto:maggieliujx@gmail.com?subject=Maggie Portfolio Bug Report">vide-coded, report bug here</a>
+  <a href="https://linkedin.com/in/maggieliujx" target="_blank" rel="noopener noreferrer">linkedIn<img src="media/index/link_out.svg" style="height: 8px; padding-left: 8px; color: white !important;"></a>
+  <a href="mailto:maggieliujx@gmail.com">maggieliujx@gmail.com<img src="media/index/link_out.svg" style="height: 8px; padding-left: 8px; color: white !important;"></a>
+    <a class="bug-report" href="mailto:maggieliujx@gmail.com?subject=Maggie Portfolio Bug Report">vide-coded, report bug here<img src="media/index/link_out.svg" style="height: 8px; padding-left: 8px; color: white !important;"></a>
 </nav>
 
 <button id="contact-toggle" aria-label="Open contact" aria-expanded="false" aria-controls="contact-nav" title="Contact">
