--- a/css/style.css
+++ b/css/style.css
@@ -1669,12 +1669,13 @@ body.project-page .grid-col-9of12 .visual-grid > .project-image {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 16px;
+  padding: 16px 24px;
   background-color: #0C4C1F;
   z-index: 1;
   transition: transform 0.3s ease-in-out;
   overflow: hidden;
   margin-top: 8px;
+  border-radius: 200px;
 }
 
 .email-content {
@@ -1724,8 +1725,8 @@ body.project-page .grid-col-9of12 .visual-grid > .project-image {
 
 @media (max-width: 1023px) {
   .site-footer {
-    margin-top: 120px;
-    margin-bottom: 80px;
+    margin-top: 56px;
+    margin-bottom: 56px;
     font-size: 24px;
   }
 
