nov 27 updated project titles to be same as home

--- a/css/style.css
+++ b/css/style.css
@@ -273,7 +273,7 @@ html, body {
   white-space: normal;
 }
 
-.d-landing .text-wrapper-5 {
+.text-wrapper-5 {
   position: relative;
   width: fit-content;
   margin-top: -1.00px;
