nov 28 renamed work.html to index.html

--- a/partials/footer.html
+++ b/partials/footer.html
@@ -39,7 +39,7 @@
       // Get the index of the current project
       const currentIndex = parseInt(currentProject.getAttribute('data-index'), 10);
 
-      // Get the project list from the portfolio-section frame-2 in work.html
+      // Get the project list from the portfolio-section frame-2 in index.html
       const projectList = Array.from(document.querySelectorAll('.portfolio-section .frame-2 .frame-3'));
 
       // Calculate the index of the next project
