nov 28 changed logo to index.html

--- a/partials/header.html
+++ b/partials/header.html
@@ -1,5 +1,5 @@
 <!-- header partial: logo, page-info, contact nav, contact-toggle, contact init, city+clock -->
-<a href="work.html" class="m-logo">
+<a href="index.html" class="m-logo">
   <img src="media/index/m_logo_green.svg" alt="Site Logo">
 </a>
 
