nov 30 moved browser icon to header.html

--- a/partials/header.html
+++ b/partials/header.html
@@ -3,6 +3,8 @@
   <img src="media/index/m_logo_green.svg" alt="Site Logo">
 </a>
 
+<link rel="icon" type="image/svg+xml" href="media/index/browser_tab.svg">
+
 <div id="site-info">
   <div id="page-info" aria-hidden="false">
     <span id="ip-city" class="label">—</span>
