--- a/partials/header.html
+++ b/partials/header.html
@@ -15,7 +15,7 @@
   <a href="about.html">about</a>
   <a href="https://linkedin.com/in/maggieliujx" target="_blank" rel="noopener noreferrer">linkedIn<img src="media/index/link_out.svg" style="height: 8px; padding-left: 8px; color: white !important;"></a>
   <a href="mailto:maggieliujx@gmail.com">maggieliujx@gmail.com<img src="media/index/link_out.svg" style="height: 8px; padding-left: 8px; color: white !important;"></a>
-    <a class="bug-report" href="mailto:maggieliujx@gmail.com?subject=Maggie Portfolio Bug Report">report bug here<img src="media/index/link_out.svg" style="height: 8px; padding-left: 8px; color: white !important;"></a>
+    <a class="bug-report" href="mailto:maggieliujx@gmail.com?subject=Maggie Portfolio Bug Report">report bug<img src="media/index/link_out.svg" style="height: 8px; padding-left: 8px; color: white !important;"></a>
 </nav>
 
 <button id="contact-toggle" aria-label="Open contact" aria-expanded="false" aria-controls="contact-nav" title="Contact">
