--- a/css/style.css
+++ b/css/style.css
@@ -656,7 +656,7 @@ body.about-page .contact-nav a {
   text-decoration: none ! important;
 }
 
-#ip-city {
+#location-clock {
   color: inherit;
   text-decoration: none;
 }
