dec 1 upscaled panorama img

--- a/partials/header.html
+++ b/partials/header.html
@@ -9,7 +9,7 @@
        href="https://www.google.com/maps/place/Amsterdam"
        target="_blank"
        rel="noopener noreferrer"
-       class="label">find me in Amsterdam --:--:--</a>
+       class="label">find me in Amsterdam --:--</a>
   </div>
 </div>
 
@@ -94,7 +94,6 @@ if (!window.__contactToggleInitialized) {
     const time = d.toLocaleTimeString('nl-NL', {
       hour: '2-digit',
       minute: '2-digit',
-      second: '2-digit',
       hour12: false,
       timeZone: 'Europe/Amsterdam'
     });
