dec 4 product designer in ams time

--- a/partials/header.html
+++ b/partials/header.html
@@ -9,7 +9,7 @@
        href="https://www.google.com/maps/place/Amsterdam"
        target="_blank"
        rel="noopener noreferrer"
-       class="label">find me in Amsterdam --:--</a>
+       class="label">product designer in Amsterdam --:--</a>
   </div>
 </div>
 
@@ -97,7 +97,7 @@ if (!window.__contactToggleInitialized) {
       hour12: false,
       timeZone: 'Europe/Amsterdam'
     });
-    if (el) el.textContent = `find me in Amsterdam ${time}`;
+    if (el) el.textContent = `product designer in Amsterdam ${time}`;
   }
 
   updateClock();
